# ascertain_Investigation

./: .gitignore  README.md  pyproject.toml
Clustering Investigation/: test_example.ipynb
Data Check/: ecg_exploration.ipynb  personality_test_exploration.ipynb  self_reports_exploration.ipynb  test.ipynb
Initial Data Check/: test.ipynb
Models/CNN/: best_model.h5  best_model_Agreeableness.h5  best_model_Conscientiousness.h5  best_model_Emotional Stability.h5  best_model_Extraversion.h5  best_model_Openness.h5  shallow_cnn.ipynb  shallow_cnn_non_pca.ipynb
Models/Classification/: knn_all_examples.ipynb  knn_hyperparameter_tuning.ipynb  knn_hyperparameter_tuning_non_pca.ipynb  rf_all_examples.ipynb  rf_example.ipynb  rf_hyperparameter_tuning.ipynb  rf_hyperparameter_tuning_non_pca.ipynb  rf_one_example.ipynb  svm_all_examples.ipynb  svm_hyperparameter_tuning.ipynb  svm_hyperparameter_tuning_non_pca.ipynb
Models/Regression/: rf_all_examples.ipynb  rf_hyperparameter_tuning.ipynb  rf_hyperparameter_tuning_non_pca.ipynb  rf_regression.ipynb
Models/Unsupervised/: dbscan_ari_driven.ipynb  dbscan_ari_driven_non_pca.ipynb  gmm_ari_driven.ipynb  (+6 more)
Plotting/: big_personality_traits.ipynb  dataset_box_plots.ipynb  pca_scree.ipynb  performance_metric_classification_str_table.ipynb  personality_train_test_plots.ipynb  regression_plots.ipynb  unsupervised_learning_metrics.ipynb
Preprocessing/: combinations_of_features.ipynb  grab_features.ipynb  pca_scree.ipynb
Results_Check/: performance_metric_classification_str.ipynb  unsupervised_checking.ipynb
misc/: test.ipynb
(+147 files in other folders)
