[tool.poetry]
name = "ascertain-investigation"
version = "0.1.0"
description = ""
authors = ["justin5927 <jauyeung59@gmail.com>"]
readme = "README.md"
packages = [{include = "ascertain_investigation"}]

[tool.poetry.dependencies]
python = "^3.10"
scipy = "^1.7.0"
scikit-learn = "^1.3.0"
ipykernel = "^6.25.1"
mat73 = "^0.62"
matplotlib = "^3.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
